--- a/index.html
+++ b/index.html
@@ -19,14 +19,26 @@
 
 <body>
     <header>
-        <h2 class="header-title">M<span>A</span>HC</h2>
         <nav>
+            <h2 class="header-title">M<span>A</span>HC</h2>
             <ul>
                 <li>Portfolio</li>
                 <li>Blog</li>
                 <li><button class="btn-primary">Hire Me</button></li>
             </ul>
         </nav>
+
+        <!-- Header Banner -->
+        <div class="banner">
+            <div class="banner-left">
+                <h3>Hi, I am</h3>
+                <h1>Md Ahkamul Hoque Chy</h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society
+                    behaved moments.</p>
+                <button class="btn-primary">Download CV</button>
+            </div>
+            <img src="images/myPicAhkamulemptyBg.jpeg" alt="MAHC" width="584" height="676">
+        </div>
     </header>
 </body>
 
