Rest of the website done

--- a/index.html
+++ b/index.html
@@ -106,6 +106,101 @@
                 </div>
             </div>
         </section>
+
+        <!-- My Resume Section -->
+        <section class="my-resume">
+            <h1>A Summary of My Resume</h1>
+            <div class="resume-container">
+                <div class="resume-education">
+                    <h2 class="resume-title">My Education</h2>
+                    <div>
+                        <h3 class="resume-subtitle">Master in Computer Engineering</h3>
+                        <h4 class="work-time">Harvard University / 2015 2017</h4>
+                        <p class="resume-description">List skill/technologies here. You can change the icon above
+
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                            commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div>
+                        <h3 class="resume-subtitle">Master in Computer Engineering</h3>
+                        <h4 class="work-time">Harvard University / 2015 2017</h4>
+                        <p class="resume-description">List skill/technologies here. You can change the icon above
+
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                            commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div>
+                        <h3 class="resume-subtitle">Master in Computer Engineering</h3>
+                        <h4 class="work-time">Harvard University / 2015 2017</h4>
+                        <p class="resume-description">List skill/technologies here. You can change the icon above
+
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                            commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+                <div class="resume-experience">
+                    <h2 class="resume-title">My Experience</h2>
+                    <div>
+                        <h3 class="resume-subtitle">Sr. Font End Developer</h3>
+                        <h4 class="work-time">Apple Inc / 2020 Current</h4>
+                        <p class="resume-description">List skill/technologies here. You can change the icon above
+
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                            commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div>
+                        <h3 class="resume-subtitle">Jr. Font End Developer</h3>
+                        <h4 class="work-time">Dribbble Inc / 2018 2022</h4>
+                        <p class="resume-description">List skill/technologies here. You can change the icon above
+
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                            commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div>
+                        <h3 class="resume-subtitle">HTML Developer</h3>
+                        <h4 class="work-time">Adobe Inc / 2017 2018</h4>
+                        <p class="resume-description">List skill/technologies here. You can change the icon above
+
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                            commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+            </div>
+            <button class="btn-primary">Download CV</button>
+        </section>
+
+        <!-- Contact Section -->
+        <section class="contact-me">
+            <div>
+                <h2 class="contact-title">Lets Connect</h2>
+                <p>Please fill out the form on this section to contact with me or call between
+                    9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+                <div>
+                    <a href="">
+                        <img src="images/icons/facebook.png" alt="Facebook">
+                    </a>
+                    <a href="">
+                        <img src="images/icons/twitter.png" alt="Twitter">
+                    </a>
+                    <a href="">
+                        <img src="images/icons/insta.png" alt="Instagram">
+                    </a>
+                </div>
+            </div>
+            <div>
+                <h2 class="contact-title">Lets Message me</h2>
+                <form action="">
+                    <input type="text" placeholder="Your name" class="form-block">
+                    <input type="email" name="" id="" placeholder="Your email" class="form-block">
+                    <textarea name="" id="" cols="30" rows="3" placeholder="Message" class="form-block"></textarea>
+                    <input type="submit" value="Submit" class="btn-primary">
+                </form>
+            </div>
+        </section>
     </main>
 </body>
 
